--- a/static/authed.html
+++ b/static/authed.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <!-- <title>Authed</title> -->
+    <title>Authed</title>
   </head>
   <body>
     Logged in.
